[gd_scene load_steps=7 format=3 uid="uid://8c7yg47fmh45"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_n536m"]
[ext_resource type="Theme" uid="uid://reixxy2fymu3" path="res://new_theme.tres" id="2_epkic"]
[ext_resource type="PackedScene" uid="uid://c6gb8xtioqkkx" path="res://table.tscn" id="2_uu8r5"]
[ext_resource type="FontFile" uid="uid://cb3a1aglu7cw4" path="res://Fonts/Envy Code R.ttf" id="3_6lbhf"]
[ext_resource type="Script" path="res://scripts/monte_calro.gd" id="5_stiw4"]
[ext_resource type="Script" path="res://scripts/graph.gd" id="5_ymnst"]

[node name="Main" type="Node"]
script = ExtResource("1_n536m")

[node name="FileDialogRed" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
theme = ExtResource("2_epkic")
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_epkic")
current_tab = 2
metadata/_edit_use_anchors_ = true

[node name="Splash Screen" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 1
metadata/_tab_index = 0

[node name="LoadData" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Background" type="Panel" parent="TabContainer/LoadData"]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 86.0
offset_right = 1872.0
offset_bottom = 1014.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModelData" parent="TabContainer/LoadData/Background" instance=ExtResource("2_uu8r5")]
layout_mode = 1
offset_bottom = -275.0

[node name="WeaponData" parent="TabContainer/LoadData/Background" instance=ExtResource("2_uu8r5")]
layout_mode = 1
offset_top = 270.0
offset_bottom = -5.0

[node name="Load" type="Button" parent="TabContainer/LoadData"]
layout_mode = 1
anchors_preset = -1
offset_left = 247.0
offset_top = 22.0
offset_right = 399.0
offset_bottom = 53.0
grow_vertical = 2

[node name="OptionButton" type="OptionButton" parent="TabContainer/LoadData"]
layout_mode = 0
offset_left = 439.69
offset_top = 22.975
offset_right = 727.69
offset_bottom = 53.975
theme = ExtResource("2_epkic")
theme_override_fonts/font = ExtResource("3_6lbhf")

[node name="Monte Carlo" type="TabBar" parent="TabContainer"]
layout_mode = 2
script = ExtResource("5_stiw4")
metadata/_tab_index = 2

[node name="AttackerSelection" type="OptionButton" parent="TabContainer/Monte Carlo"]
layout_mode = 2
offset_left = 65.0
offset_top = 45.0
offset_right = 365.0
offset_bottom = 80.0
metadata/_edit_use_anchors_ = true

[node name="AttackerWeaponType" type="OptionButton" parent="TabContainer/Monte Carlo"]
layout_mode = 0
offset_left = 400.0
offset_top = 46.0
offset_right = 515.0
offset_bottom = 81.0
selected = 0
item_count = 2
popup/item_0/text = "Melee"
popup/item_1/text = "Shooting"
popup/item_1/id = 1
metadata/_edit_use_anchors_ = true

[node name="Subject" type="Panel" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = -1
offset_left = 70.0
offset_top = 100.0
offset_right = 970.0
offset_bottom = 535.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="ModelData" parent="TabContainer/Monte Carlo/Subject" instance=ExtResource("2_uu8r5")]
layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="DefenderSelection" type="OptionButton" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = -1
offset_left = 68.0
offset_top = 545.0
offset_right = 368.0
offset_bottom = 580.0
item_count = 1
metadata/_edit_use_anchors_ = true

[node name="Target" type="Panel" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = -1
offset_left = 67.0
offset_top = 596.0
offset_right = 967.0
offset_bottom = 1031.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="ModelData" parent="TabContainer/Monte Carlo/Target" instance=ExtResource("2_uu8r5")]
layout_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Graph" type="Panel" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = -1
offset_left = 1003.0
offset_top = 107.0
offset_right = 1868.0
offset_bottom = 1022.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Graph" type="Control" parent="TabContainer/Monte Carlo/Graph"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ymnst")

[node name="GraphTitle" type="Label" parent="TabContainer/Monte Carlo/Graph/Graph"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30

[node name="AttackerContext" type="Label" parent="TabContainer/Monte Carlo/Graph/Graph"]
layout_mode = 1
anchors_preset = -1
offset_top = 69.0
offset_right = 865.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="file_selected" from="FileDialogRed" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="FileDialogRed" to="." method="_on_file_dialog_red_file_selected"]
[connection signal="pressed" from="TabContainer/LoadData/Load" to="." method="_on_load_pressed"]
[connection signal="item_selected" from="TabContainer/LoadData/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="TabContainer/Monte Carlo/AttackerSelection" to="TabContainer/Monte Carlo" method="_on_subject_selection_item_selected"]
[connection signal="item_selected" from="TabContainer/Monte Carlo/AttackerWeaponType" to="TabContainer/Monte Carlo" method="_on_subject_weapon_type_item_selected"]
[connection signal="item_selected" from="TabContainer/Monte Carlo/DefenderSelection" to="TabContainer/Monte Carlo" method="_on_target_selection_item_selected"]
